# cuopt

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  GRPC_ARCHITECTURE.md  GRPC_QUICK_START.md  README.md  SERVER_ARCHITECTURE.md  build.sh  dependencies.yaml  gemini-extension.json  pre-commit-config.js  sonar-project.properties
cpp/src/: CMakeLists.txt
cpp/src/barrier/: CMakeLists.txt  barrier.cu  barrier.hpp  conjugate_gradient.hpp  cusparse_info.hpp  cusparse_view.cu  cusparse_view.hpp  dense_matrix.hpp  dense_vector.hpp  device_sparse_matrix.cu  iterative_refinement.hpp  pinned_host_allocator.cu  pinned_host_allocator.hpp  sparse_cholesky.cuh  sparse_matrix_kernels.cuh
cpp/src/branch_and_bound/: CMakeLists.txt  bb_event.hpp  branch_and_bound.cpp  branch_and_bound.hpp  branch_and_bound_worker.hpp  deterministic_workers.hpp  diving_heuristics.cpp  diving_heuristics.hpp  mip_node.cpp  mip_node.hpp  node_queue.hpp  pseudo_costs.cpp  pseudo_costs.hpp  reduced_cost_fixing.hpp  worker.hpp  worker_pool.hpp
cpp/src/cuts/: CMakeLists.txt  cuts.cpp  cuts.hpp
cpp/src/dual_simplex/: CMakeLists.txt  basis_solves.cpp  basis_solves.hpp  basis_updates.cpp  basis_updates.hpp  bb_worker_state.hpp  bound_flipping_ratio_test.cpp  bound_flipping_ratio_test.hpp  bounds_strengthening.cpp  bounds_strengthening.hpp  branch_and_bound.cpp  branch_and_bound.hpp  crossover.cpp  cuts.cpp  deterministic_workers.hpp  dual_simplex_features.hpp  folding.cpp  initial_basis.cpp  phase2.cpp  phase2.hpp  presolve.cpp  presolve.hpp  primal.cpp  primal.hpp  (+18 more)
(+466 files in other folders)
